clusters/corpus/apps/personal/public-services/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-services-home
  namespace: personal
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: public-services-home
  template:
    metadata:
      labels:
        app: public-services-home
    spec:
      containers:
        - name: public-services-home
          image: docker.io/nginx:1.31.6
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: media
              subPath: web/public-services/
              mountPath: /usr/share/nginx/html/
            # - name: media
            #   mountPath: /media/
            - name: conf
              mountPath: /etc/nginx/conf.d/
          resources:
            requests:
              cpu: "10m"
            limits:
              memory: "256Mi"
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: nas-volume1-media
        - name: conf
          configMap:
            name: public-services-config
