clusters/corpus/apps/personal/public-services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-services
  namespace: personal
spec:
  selector:
    app: public-services-home
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
